logs/Slang/generated/hdlconv/hdlconvertor_p59.sv.log
name: hdlconvertor_p59
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv:7:4: error: expected member
   interconnect [0:1] iBus;
   ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv:18:11: error: 'realNet' is not a type
  (output realNet out);
          ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv:21:14: error: language feature not yet supported
module rlMod(input interconnect [0:1] iBus);
             ^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv:21:39: error: variable port 'iBus' cannot have direction inout
module rlMod(input interconnect [0:1] iBus);
                                      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv:22:3: error: unknown module 'lMod'
  lMod l1(iBus[0]);
  ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p59.sv:23:3: error: unknown module 'rMod'
  rMod r1(iBus[1]);
  ^~~~
